added gallery and cloudinary
